--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod && ng run angular-seo:server",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,8 +19,11 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@nguniversal/express-engine": "^6.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
